--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,5 +8,5 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: 'Roboto';
+  font-family: var(--font-pretendard-semibold), var(--font-pretendard-light);
 }
