--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
+@font-face {
+	font-family: '--font-pretendard-regular';
+	src: url('../utiles/fonts/Pretendard-Regular.otf') format('opentype') ;
+	font-display: swap;
+}
+
+:root {
+  --font-pretendard-regular: '--font-pretendard-regular';
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,5 +18,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: var(--font-pretendard-semibold), var(--font-pretendard-light);
+  /* font-family: var(--font-pretendard-light); */
+  font-family: var(--font-pretendard-regular);
+  /* font-family: var(--font-pretendard-semibold); */
 }
