--- a/src/app/(home)/page.module.css
+++ b/src/app/(home)/page.module.css
@@ -1,9 +1,8 @@
-.main {
+.home {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
-  font-size: 200px;
 }
