--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,47 @@
 @font-face {
 	font-family: '--font-pretendard-regular';
-	src: url('../utiles/fonts/Pretendard-Regular.otf') format('opentype') ;
+	src: url('../utiles/fonts/Pretendard-Regular.otf') format('opentype');
 	font-display: swap;
+}
+
+/* scroll bar */
+/* 스크롤바의 width */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 10px;
+
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+/* 스크롤바의 전체 배경색 */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
+}
+/* 스크롤바 색 */
+::-webkit-scrollbar-button {
+  display: none;
 }
 
 :root {
   --font-pretendard-regular: '--font-pretendard-regular';
+
+  /* brand main color */
+  /* brand sub color */
+  /* system color*/
+  --system-white: #FFFFFF;
+  --system-black: #111111; 
+  --system-gray: #505050;
+  --system-disabled: #999999;
+  --system-yellow: #FFAA00;
+  --system-blue: #1F489B;
+  --system-red: #B71C1C;
+  --system-neon-magenta: #ff0081;
+
+  /* 공통 css */
+	--header-height: 84px;
+	--inner-wrap-side: 20px;
 }
 
 * {
@@ -14,11 +50,18 @@
   margin: 0;
 }
 
-html,
-body {
+html, body {
   max-width: 100vw;
-  overflow-x: hidden;
-  /* font-family: var(--font-pretendard-light); */
+  overflow-x: auto;
   font-family: var(--font-pretendard-regular);
+  /* font-family: var(--font-pretendard-light); */
   /* font-family: var(--font-pretendard-semibold); */
+}
+
+main {
+  max-width: 1580px;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 0 var(--inner-wrap-side);
 }
